--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "id": "yaml-table",
-  "name": "YAML Tables",
+  "name": "YAML Table",
   "version": "1.0.0",
   "minAppVersion": "0.15.0",
   "description": "Transform YAML code blocks into HTML tables for better visualization",
