--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yaml-table",
-  "version": "1.0.0",
-  "description": "An Obsidian plugin that renders YAML data as HTML tables in real-time",
+  "version": "1.1.3",
+  "description": "An Obsidian plugin that renders YAML data as HTML tables",
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
@@ -17,7 +17,6 @@
   "author": "dainakai",
   "license": "MIT",
   "devDependencies": {
-    "@types/js-yaml": "^4.0.9",
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
@@ -26,8 +25,5 @@
     "obsidian": "latest",
     "tslib": "2.3.1",
     "typescript": "4.4.4"
-  },
-  "dependencies": {
-    "js-yaml": "^4.1.0"
   }
 }
